# Hardware

./: LICENSE
c4g_hardware_interface/: CMakeLists.txt  Readme.md  package.xml
c4g_hardware_interface/bagfiles/: c4g_master_and_slave_lift_trajectories.bag  c4g_master_and_slave_place_trajectories.bag  c4g_master_lift_trajectory.bag  c4g_master_place_trajectory.bag  c4g_slave_lift_trajectory.bag  c4g_slave_place_trajectory.bag
c4g_hardware_interface/config/: c4g_controllers.yaml  c4g_hardware_interface.yaml
c4g_hardware_interface/demo/: demo_c4g_trajectory_planner.cpp
c4g_hardware_interface/doc/: Readme.md
c4g_hardware_interface/include/c4g_hardware_interface/: c4g_hardware_interface.h  exceptions.h
c4g_hardware_interface/launch/: c4g_follow_joint_trajectory.launch  c4g_main_control_loop.launch  c4g_ros_control_manual.launch  c4g_ros_control_offline_demo.launch  c4g_ros_control_online_demo.launch  c4g_state_controller.launch
c4g_hardware_interface/scripts/: setup.bash
c4g_hardware_interface/src/: c4g_hardware_interface.cpp  main_loop.cpp  main_loop_with_gripper.cpp
